# examples

./: .env.sample  .gitignore  README.md  pyproject.toml  show_accounts.py  update_moneykit.sh
budgeting_app/: docker-compose.yml
budgeting_app/backend_python/: Dockerfile  pyproject.toml
budgeting_app/backend_python/budgeting_app/: settings.py
budgeting_app/backend_python/budgeting_app/accounts/: __init__.py  link_manager.py  models.py  respository.py
budgeting_app/backend_python/budgeting_app/api/: __init__.py  linking.py  links.py
budgeting_app/backend_python/budgeting_app/users/: __init__.py  respository.py  user_manager.py
budgeting_app/backend_python/migrations/versions/: 8eb30795d8fd_initial_models.py
budgeting_app/frontend_ios/Budget/Budget/: SceneDelegate.swift
budgeting_app/frontend_ios/Budget/Budget.xcodeproj/: project.pbxproj
budgeting_app/frontend_ios/Budget/Budget.xcodeproj/project.xcworkspace/xcuserdata/wesleylindsay.xcuserdatad/: UserInterfaceState.xcuserstate
budgeting_app/frontend_ios/Budget/Budget.xcodeproj/xcuserdata/wesleylindsay.xcuserdatad/xcschemes/: xcschememanagement.plist
budgeting_app/frontend_ios/Budget/Budget/Base.lproj/: Main.storyboard
budgeting_app/frontend_ios/Budget/Budget/Controls/: CopyableLabel.swift  EasyTapButton.swift
budgeting_app/server_python/: pyproject.toml
cache_transactions/: Makefile  README.md  asciinema_recording.cast  docker-compose.yml
cache_transactions/python/: Dockerfile  cli  db.py  pyproject.toml
create_link/: .dockerignore  Makefile  README.md  create_link.postman_collection.json  docker-compose.yml  run.sh
create_link/backend/python/: Dockerfile  README.md  pyproject.toml
create_link/backend/python/app/: api.py  main.py  settings.py
create_link/backend/python_without_sdk/: .gitignore  Dockerfile  README.md  pyproject.toml
create_link/backend/python_without_sdk/app/: api.py  main.py  settings.py
create_link/backend/ruby/: Dockerfile  Gemfile  README.md  app.rb
create_link/backend_python/: pyproject.toml
create_link/backend_python/app/: __init__.py  api.py  settings.py
create_link/backend_python/budgeting_app/: __init__.py  main.py
create_link/backend_python/budgeting_app/accounts/: __init__.py  calculator.py  models.py  respository.py
create_link/backend_python/budgeting_app/api/: budget.py  linking.py  links.py  login.py  webhook_verification.py  webhooks_handler.py
create_link/backend_python/budgeting_app/database/: __init__.py  connection.py
create_link/backend_python/budgeting_app/users/: models.py  respository.py  user_manager.py
create_link/backend_python/migrations/: env.py
create_link/backend_python/migrations/versions/: 8eb30795d8fd_initial_models.py
create_link/backend_python_httpx/: pyproject.toml
create_link/backend_python_httpx/app/: __init__.py  api.py
create_link/backend_python_plaid/: pyproject.toml
create_link/backend_python_plaid/app/: __init__.py  api.py
create_link/backend_ruby/: Dockerfile  Gemfile  app.rb
create_link/backend_ruby_plaid/: app.rb
create_link/frontend/android/: README.md
create_link/frontend/ios/Create Link/: SceneDelegate.swift
create_link/frontend/ios/Create Link.xcodeproj/: project.pbxproj
create_link/frontend/ios/Create Link/Base.lproj/: LaunchScreen.storyboard
create_link/frontend/ios/Create Link/Controls/: ActivityButton.swift
create_link/frontend/ios/Create Link/Models/: ExchangeableTokenRequest.swift  LinkSessionRequest.swift
create_link/frontend/ios/Create Link/Protocols/: ApiClientType.swift  ApiEndpoint.swift
create_link/frontend/ios/Create Link/Services/: LinkApiClient.swift
create_link/frontend/ios/Create Link/Utils/: NSLayout+Extensions.swift
create_link/frontend/ios/Create Link/View Controllers/: DemoViewController.swift
create_link/frontend/ios/Create Link/View Models/: DemoViewModel.swift
create_link/frontend/web/: Dockerfile  package-lock.json  package.json
create_link/frontend_ios/: .gitignore
create_link/frontend_ios/Create Link.xcodeproj/: project.pbxproj
create_link/frontend_ios/Create Link.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
create_link/frontend_ios/Create Link.xcodeproj/xcshareddata/xcschemes/: Create Link.xcscheme
create_link/frontend_ios/Create Link/Assets.xcassets/MoneyKitLogo.imageset/: Contents.json
create_link/frontend_ios/Create Link/Controls/: CopyableLabel.swift
create_link/frontend_ios/Create Link/Create Link/: AppDelegate.swift
create_link/frontend_ios/Create Link/Create Link/Base.lproj/: Main.storyboard
create_link/frontend_ios/Create Link/Create Link/View Controllers/: DemoViewController.swift
create_link/frontend_ios/Create Link/Models/: ApiClientError.swift  Environment.swift  LinkSession.swift
create_link/frontend_ios/Create Link/Protocols/: ApiRequest.swift  ApiResource.swift
create_link/frontend_ios/Create Link/View Controllers/: DemoViewController.swift
create_link/frontend_web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
create_link/frontend_web/lib/moneykit/: README.md  package.json  tsconfig.json
create_link/frontend_web/src/: App.tsx
fetch_products/: Makefile  README.md  asciinema_recording.cast  docker-compose.yml
fetch_products/python/: .dockerignore  Dockerfile  cli  pyproject.toml
fetch_products/ruby/: Dockerfile  Gemfile  cli  run.sh
use_webhooks/: Makefile  README.md  docker-compose.yml  ngrok.yml  run.sh  use_webhooks.postman_collection.json
use_webhooks/backend/python/: Dockerfile  pyproject.toml
use_webhooks/backend/python/app/: api.py  client.py  main.py  ngrok.py
use_webhooks/backend/python/app/api/: linking.py  links.py  webhooks.py
use_webhooks/backend/ruby/: Gemfile  app.rb
use_webhooks/backend/ruby/lib/: client.rb  ngrok.rb
use_webhooks/frontend/: README.md  package-lock.json  package.json
use_webhooks/frontend/src/: App.tsx
(+31 files in other folders)
