[tool.poetry]
name = "server-python"
version = "0.1.0"
description = ""
authors = ["moneykit.com"]
readme = "README.md"
packages = [{include = "server_python"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {version = "^2.0.10", extras = ["mypy"]}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
