[tool.poetry]
name = "fetch_products"
version = "0.1.0"
description = ""
authors = ["MoneyKit"]
readme = "README.md"

[tool.poetry.scripts]
mk = 'cli:run'

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
moneykit = "^0.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
