[project]
name = "cache_transactions"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "moneykit>=0.2.3",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
package = true

[project.scripts]
mk = "cli:run"

[dependency-groups]
dev = ["ruff>=0.1.7,<0.2"]
