[project]
name = "fetch_products"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moneykit>=0.2.3",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[project.scripts]
mk = 'cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
