[project]
name = "create_link_app"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "moneykit>=0.2.3",
    "fastapi>=0.110.1",
    "uvicorn>=0.24.0.post1",
    "pydantic-settings>=2.1.0",
]

[dependency-groups]
dev = [
    "watchgod>=0.8.2,<0.9",
    "ruff>=0.11.7,<0.12",
    "mypy>=1.7.1,<2",
]

[tool.uv]
package = true

[tool.ruff]
lint.select = ["I", "E", "W", "F", "C"]
lint.ignore = ["E501"]
line-length = 120

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = [".venv/"]
warn_return_any = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
